# angorapay-mesh

./: .dockerignore  .env.angora.example  .env.angora.production.example  .env.example  .gitignore  Dockerfile.angora  README.md  angora_implementation_master_plan.md  angora_market_intelligence_agents_brd_and_technical_implementation.md  angorapay_mesh_landing_redesign (5).jsx  angorapay_mesh_landing_redesign.jsx  docker-compose.angora.yml  docker-compose.vultr.yml  ecosystem.config.cjs  package-lock.json  package.json  postcss.config.js  tailwind.angora.config.js  vite.angora.config.js
.github/workflows/: angora-integration.yml  publish-sdks.yml
docs/: ANGORA_AGENTIC_MERGE_NOTES.md  ANGORA_CLOSEOUT_PLAN.md  ANGORA_PRODUCTION_COMPLETION_NOTES_V7.md  ANGORA_PRODUCTION_HARDENING_NOTES.md  ANGORA_PRODUCTION_RECONCILIATION_LEDGER.md  ANGORA_README_PRODUCTION_GRADE_UPDATE.md  ANGORA_UI_PRODUCT_UPGRADE_V8.md
scripts/: bootstrap-circle-wallet.ts  build-python-sdk.mjs  check-python-sdk.mjs  publish-python-sdk.mjs  python-tooling.mjs
sdk/python/: README.md  angorapay.py  pyproject.toml
sdk/typescript/: README.md  angorapay.ts  package-lock.json  package.json  tsconfig.json
src/angora/: artifact-builder.ts  audit-log.ts  auth-manager.ts  circle-x402-adapter.ts  execution-history.ts  idempotency-store.ts  live-data-fetcher.ts  mission-store.ts  observability.ts  openapi.ts  payment-ledger.ts  policy-engine.ts  provider-delivery-store.ts  rate-limiter.ts  receipt-store.ts  reconciliation-ledger.ts  reconciliation-service.ts  reconciliation-types.ts  reputation-engine.ts  (+15 more)
(+26 files in other folders)
