[project]
name = "angorapay"
version = "0.1.0"
description = "Python SDK for AngoraPay Mesh market-agent service routing."
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]
readme = "README.md"
keywords = ["angorapay", "x402", "circle", "arc", "agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
