[project]
name = "angorapay"
version = "0.1.0"
description = "Python SDK for AngoraPay Mesh market-agent service routing, receipts, and reconciliation."
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]
readme = "README.md"
keywords = ["angorapay", "x402", "circle", "arc", "agents"]
license = { text = "MIT" }
authors = [{ name = "AngoraPay Mesh" }]

[project.urls]
Homepage = "https://github.com/othnielObasi/angorapay-mesh"
Repository = "https://github.com/othnielObasi/angorapay-mesh"
Issues = "https://github.com/othnielObasi/angorapay-mesh/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["angorapay.py"]
